--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<meta http-equiv="refresh" content="0.1;url=http://pc.64.gs:81/">
+<meta http-equiv="refresh" content="0.1;url=http://my.64.gs:81/">
 <title></title>
 <noscript></head></noscript>
 <body>
